--- a/design/_css_frontend/core/scheme.css
+++ b/design/_css_frontend/core/scheme.css
@@ -548,36 +548,36 @@ a:active {
 	height: 34px;
 }#layout-box-38.layout-box {
 	border-top-style: solid;
-	border-top-color: #7F0000;
-	border-top-width: 4px;
+	border-top-color: #2088c4;
+	border-top-width: 2px;
 	border-right-style: solid;
-	border-right-color: #7F0000;
-	border-right-width: 4px;
+	border-right-color: #2088c4;
+	border-right-width: 2px;
 	border-bottom-style: solid;
-	border-bottom-color: #7F0000;
-	border-bottom-width: 4px;
+	border-bottom-color: #2088c4;
+	border-bottom-width: 2px;
 	border-left-style: solid;
-	border-left-color: #7F0000;
-	border-left-width: 4px;
+	border-left-color: #2088c4;
+	border-left-width: 2px;
 }
 
 #layout-box-38.layout-box {
-	border-top-right-radius: 4px;
-	-webkit-border-top-right-radius: 4px;
-	-khtml-border-top-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	border-top-left-radius: 4px;
-	-webkit-border-top-left-radius: 4px;
-	-khtml-border-top-left-radius: 4px;
-	-moz-border-radius-topleft: 4px;
-	border-bottom-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-khtml-border-bottom-right-radius: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-bottom-left-radius: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	-khtml-border-bottom-left-radius: 4px;
-	-moz-border-radius-bottomleft: 4px;
+	border-top-right-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+	-khtml-border-top-right-radius: 3px;
+	-moz-border-radius-topright: 3px;
+	border-top-left-radius: 3px;
+	-webkit-border-top-left-radius: 3px;
+	-khtml-border-top-left-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	border-bottom-right-radius: 3px;
+	-webkit-border-bottom-right-radius: 3px;
+	-khtml-border-bottom-right-radius: 3px;
+	-moz-border-radius-bottomright: 3px;
+	border-bottom-left-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-khtml-border-bottom-left-radius: 3px;
+	-moz-border-radius-bottomleft: 3px;
 }
 
 #layout-box-38 .layout-box-header h3,
@@ -648,45 +648,45 @@ a:active {
 }
 
 #layout-box-38 .layout-box-content {
-	border-bottom-right-radius: 3px;
-	-webkit-border-bottom-right-radius: 3px;
-	-khtml-border-bottom-right-radius: 3px;
-	-moz-border-radius-bottomright: 3px;
-	border-bottom-left-radius: 3px;
-	-webkit-border-bottom-left-radius: 3px;
-	-khtml-border-bottom-left-radius: 3px;
-	-moz-border-radius-bottomleft: 3px;
+	border-bottom-right-radius: 2px;
+	-webkit-border-bottom-right-radius: 2px;
+	-khtml-border-bottom-right-radius: 2px;
+	-moz-border-radius-bottomright: 2px;
+	border-bottom-left-radius: 2px;
+	-webkit-border-bottom-left-radius: 2px;
+	-khtml-border-bottom-left-radius: 2px;
+	-moz-border-radius-bottomleft: 2px;
 }
 
 #layout-box-38 .layout-box-header {
-	border-top-right-radius: 3px;
-	-webkit-border-top-right-radius: 3px;
-	-khtml-border-top-right-radius: 3px;
-	-moz-border-radius-topright: 3px;
-	border-top-left-radius: 3px;
-	-webkit-border-top-left-radius: 3px;
-	-khtml-border-top-left-radius: 3px;
-	-moz-border-radius-topleft: 3px;
+	border-top-right-radius: 2px;
+	-webkit-border-top-right-radius: 2px;
+	-khtml-border-top-right-radius: 2px;
+	-moz-border-radius-topright: 2px;
+	border-top-left-radius: 2px;
+	-webkit-border-top-left-radius: 2px;
+	-khtml-border-top-left-radius: 2px;
+	-moz-border-radius-topleft: 2px;
 }
 
 #layout-box-38.layout-box-collapsed .layout-box-header,
 #layout-box-38.layout-box-option-header-false .layout-box-content {
-	border-top-right-radius: 3px;
-	-webkit-border-top-right-radius: 3px;
-	-khtml-border-top-right-radius: 3px;
-	-moz-border-radius-topright: 3px;
-	border-top-left-radius: 3px;
-	-webkit-border-top-left-radius: 3px;
-	-khtml-border-top-left-radius: 3px;
-	-moz-border-radius-topleft: 3px;
-	border-bottom-right-radius: 3px;
-	-webkit-border-bottom-right-radius: 3px;
-	-khtml-border-bottom-right-radius: 3px;
-	-moz-border-radius-bottomright: 3px;
-	border-bottom-left-radius: 3px;
-	-webkit-border-bottom-left-radius: 3px;
-	-khtml-border-bottom-left-radius: 3px;
-	-moz-border-radius-bottomleft: 3px;
+	border-top-right-radius: 2px;
+	-webkit-border-top-right-radius: 2px;
+	-khtml-border-top-right-radius: 2px;
+	-moz-border-radius-topright: 2px;
+	border-top-left-radius: 2px;
+	-webkit-border-top-left-radius: 2px;
+	-khtml-border-top-left-radius: 2px;
+	-moz-border-radius-topleft: 2px;
+	border-bottom-right-radius: 2px;
+	-webkit-border-bottom-right-radius: 2px;
+	-khtml-border-bottom-right-radius: 2px;
+	-moz-border-radius-bottomright: 2px;
+	border-bottom-left-radius: 2px;
+	-webkit-border-bottom-left-radius: 2px;
+	-khtml-border-bottom-left-radius: 2px;
+	-moz-border-radius-bottomleft: 2px;
 }
 
 #layout-box-38 .layout-box-icons .layout-box-icon {
